--- a/manuscript.Rmd
+++ b/manuscript.Rmd
@@ -270,7 +270,7 @@ NOTES:
 Strengths and limitations
 -----------
 
-One of the strengths of this study is the duration of enrolment and Karolinska University Hospital's catchment population of 3 million, which allowed for a large study population. The outcome data is strengthened by Karolinska University Hospital's extensive quality review process involving personnel from all concerned specialities and professions. All patients that met inclusion criteria were included in the study. 
+One of the strengths of this study is the duration of enrolment and Karolinska University Hospital's catchment population of 3 million, which allowed for a large study population. The outcome data is strengthened by Karolinska University Hospital's extensive quality review process involving personnel from all concerned specialities and professions. All patients that met inclusion criteria were included in the study. Data collection, patient inclusion and data analysis was prepared on scrambled data by a single student research before being given access to the real data, in order to minimise researcher bias.
 
 There were several limitations to this study. One of them is that selection of cases for review at conferences was in large part based upon the use of audit filters. There is as yet no widespread consensus on which audit filters are the most effective at identifying cases and this is an ongoing topic of research. The choice of audit filters used affects case selection and in turn introduces an element of selection bias into this study. It is possible, and perhaps even likely, that some cases with opportunities for improvement were never selected for case review and therefore weren't available for inclusion in this study. Another limitation is that, due to the long duration of enrolment in this study, the composition of the staff present at conferences will have differed over time. Determining whether OFI exists or not is an essentially subjective evaluation and the conclusions reached by any given conference may vary depending on which individuals are present. It is also possible that standards and expectations of care have changed over time as knowledge and technology improves, which would also in turn affect assignment of OFI. 
 
@@ -289,16 +289,15 @@ Our results do show an association between lower probability of survival and hig
 <!-- why important -->  
 <!-- similar -->
 
-
-Clinical applications 
------------
-
-
-### Generalisability 
+## Generalisability 
 This study is based on a patient population at a level 1 trauma centre in Stockholm, Sweden and the results are likely applicable for other level 1 trauma centres in the Nordic countries, as these countries share similarities in patient demographics, comorbidities, and injury types. As mentioned previously, the Norwegian model NORMIT was found to be superior to the American model TRISS at predicting mortality at this hospital <!-- ghorbani -->. This study has less external validity with regards to international populations that differ significantly from the one in this study, for example populations with a higher proportion of penetrating trauma. 
 
 ### Health equity
+The demographical characteristics of the participants in this study reflect the well-known demographics of trauma patients worlwide. `r dd['male']`% of participants were male and the median age was `r dd['age']`, which matches with statistics both in Sweden and globally <!-- find a cite even tho i know this is true -->.  The predominance of male patients invites one to question if female patients are less likely to receive quality care. In healthcare as in all areas, repetition leads to mastery of a skill, so an onlooker might be tempted to assume that the high volume of male patients in trauma will lead healthcare providers to superiority iin treating males, whilst treatment of female patients will be neglected. This demographical difference has precipitated research that seeks to investigate whether this presumption holds true, and several large multi-centre studies have been published that evaluated whether there is a correlation between sex and outcomes. None of these studies found a correlation beween sex and increased mortality or morbidity <!-- maybe write: or other serious outcomes --> <!-- also add cites -->, and in fact one study in the Netherlands found that female sex was correlated with decreased mortality <!-- cite -->. 
 
+This study has not stratified for sex in the statistical analyses, and therefore cannot comment on any relation between sex and OFI at this centre. One of the trauma severity models we investigated, PS, does include patient sex as a coefficient in predicting mortality, but we did not examine whether patient sex affects the ability of PS to predict OFI. However, there is another currently ongoing project at this hospital that compares OFI between the male and female sex cohorts. The uneven distribution of sex in this study is not a limitation of this study in terms of external validation and generalisability since our demographics match the distribution in the Swedish trauma population. <!-- probably rephrase since htis is p similar to what elias said --> 
+
+Another aspect of health equity is patient age. We know that peer review panels are more likely to classify trauma deaths as non-preventable in the geriatric population <!-- Radke 2019, Radke didnt cite his source tho -->. This is unlikely to be purely due to discrimination, since several factors make the elderly less likely to survive severe trauma, including a higher prevalence of comorbidities and in general lower margins for tolerating extreme physiological stress <!-- maybe some cites about response to injury in elderly -->. In fact, all three trauma severity models investigated in this study include coefficients for age, since age is a well-known predictor of mortality. Nevertheless, there is a possibility that healthcare providers are less likely to look for errors in older patients due to a predisposition to finding older patients less likely to be savable. The question of whether age is correlated with OFI was outside the scope of this study, but as with sex, is being investigated in other currently ongoing projects at this institution. The geriatric population differs from the average adult in terms of injury types, injury response, and management. This, in combination with worse trauma outcomes in the geriatric population, should prompt focus on this cohort in future research since this group has perhaps the most to gain from improvements in trauma care, especially improvements that recognise the unique challenges in this population and aim to specifically tailor their care to those challenges. 
 
 ## Future research
 
@@ -329,6 +328,20 @@ Conclusion
 ==========
 
 <!-- Give a short conclusion, corresponding to the aim -->
+
+Contributions
+==========
+The code for statistical analysis and the writing of this paper has been carried out by myself, although of course with advice from my supervisors. 
+<!-- 
+I know it maybe seems weird to have this section, but the instructions specifically say: 
+Här anger du vilka delar och aspekter av arbetet som du personligen har utfört, och vilka som
+har gjorts av andra, t ex mer avancerad statistik, kemiska specialanalyser. Om du har
+samarbetat med en kurskamrat inom ett större projekt behöver du tydligt ange vilka delar man
+genomfört/skrivit tillsammans och vilka delar har utförts individuellt. Ange också namn på
+personen/ -er på din kurs du samarbetat med. Har du gjort det mesta själv anger du det.
+
+The last sentence makes it seem like I have to include this -->
+
 
 References
 ==========
